sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/PTS_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Procurement Request Line Item</label>
    <nameField>
        <displayFormat>PR-LI-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procurement Request Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>