sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Actual_Price__c.field-meta.xml
<CustomField>
    <fullName>Actual_Price__c</fullName>
    <label>Actual Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>