sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>Asset_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Id</label>
    <referenceTo>Sanergy_Asset__c</referenceTo>
    <relationshipLabel>Procurement Request Line Items</relationshipLabel>
    <relationshipName>Procurement_Request_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>