sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <formula>Asset_Id__r.Asset_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Name</label>
    <type>Text</type>
</CustomField>