sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budget_Amount__c</fullName>
    <description>The gross amount of money budgeted to buy this item</description>
    <inlineHelpText>The gross amount of money budgeted to buy this item</inlineHelpText>
    <label>Total Budget Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>