sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Budget_Amount_Per_item__c.field-meta.xml
<CustomField>
    <fullName>Budget_Amount_Per_item__c</fullName>
    <formula>Budget_Amount__c / Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Amount Per item</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>