sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Budget_Item__c.field-meta.xml
<CustomField>
    <fullName>Budget_Item__c</fullName>
    <label>Budget Item</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>