sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>