sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Commodity_Code_Gla__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Code_Gla__c</fullName>
    <label>Commodity Code Gla</label>
    <length>255</length>
    <type>Text</type>
</CustomField>