sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sanergy Ltd</fullName>
            </value>
            <value>
                <fullName>Fresh Life Initiative Ltd</fullName>
            </value>
            <value>
                <fullName>Sanergy Inc (FP)</fullName>
            </value>
            <value>
                <fullName>Sanergy Inc (NP)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>