sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Contract_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Contract_Compliant__c</fullName>
    <formula>OR(NOT(ISBLANK(Purchase_Order_Item__c ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Compliant</label>
    <type>Checkbox</type>
</CustomField>