sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KES (Kenyan Shillings)</fullName>
            </value>
            <value>
                <fullName>Dollars</fullName>
            </value>
            <value>
                <fullName>Euros</fullName>
            </value>
            <value>
                <fullName>Pounds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>