sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Currency_Config__c.field-meta.xml
<CustomField>
    <fullName>Currency_Config__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Currency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Currency_Config__c.Current__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Currency_Config__c</referenceTo>
    <relationshipLabel>Procurement Request Line Items (Currency)</relationshipLabel>
    <relationshipName>PTS_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>