sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Estimate__c.field-meta.xml
<CustomField>
    <fullName>Estimate__c</fullName>
    <label>Total Budget Amount In KES</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>