sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <formula>TEXT( Currency_Config__r.Value__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exchange Rate</label>
    <type>Text</type>
</CustomField>