sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Inv_PO_Conversion_Factor__c.field-meta.xml
<CustomField>
    <fullName>Inv_PO_Conversion_Factor__c</fullName>
    <formula>Purchase_Order_Item__r.UOM_Conversion_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory - PO Conversion Factor</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>