sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Inventory_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item_Id__c</fullName>
    <formula>Purchase_Order_Item__r.Inventory_Item__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Item Id</label>
    <type>Text</type>
</CustomField>