sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Inventory_Item_UOM__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item_UOM__c</fullName>
    <formula>Purchase_Order_Item__r.Inventory_Item__r.Inventory_UoM__r.Name</formula>
    <inlineHelpText>A unit of measure is assigned to all inventory items and must be defined before a product can be entered.  Each product will have a stocking unit of measure, sales ordering unit of measure and a purchasing unit of measure.</inlineHelpText>
    <label>Inventory Item UOM</label>
    <type>Text</type>
</CustomField>