sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Inventory_Unit_of_measure__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Unit_of_measure__c</fullName>
    <formula>Inventory_Item__r.Inventory_UoM__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory UoM</label>
    <type>Text</type>
</CustomField>