sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Inventory_UoM__c.field-meta.xml
<CustomField>
    <fullName>Inventory_UoM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory UoM</label>
    <referenceTo>Inventory_UoM__c</referenceTo>
    <relationshipLabel>Procurement Request Line Items</relationshipLabel>
    <relationshipName>Procurement_Request_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>