sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Is_Item_Type_Blank__c.field-meta.xml
<CustomField>
    <fullName>Is_Item_Type_Blank__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Changes to 1 if [Item Type] field is blank otherwise changes to 0</description>
    <inlineHelpText>Changes to 1 if [Item Type] field is blank otherwise changes to 0</inlineHelpText>
    <label>Is Item Type Blank</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>