sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>