sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Category__c</fullName>
    <inlineHelpText>Stock Item - Items that are usually kept in our inventory
One-off Item - Items that are not kept in our inventory
Services -  Refers to services</inlineHelpText>
    <label>Item Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stock Item</fullName>
            </value>
            <value>
                <fullName>One-off Item</fullName>
            </value>
            <value>
                <fullName>Service Item</fullName>
            </value>
            <value>
                <fullName>Direct Item</fullName>
                <isActive>false</isActive>
                <label>Direct Item</label>
            </value>
            <value>
                <fullName>Indirect Item</fullName>
                <isActive>false</isActive>
                <label>Indirect Item</label>
            </value>
            <value>
                <fullName>Service</fullName>
                <isActive>false</isActive>
                <label>Service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>