sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Item_Quote_Information__c.field-meta.xml
<CustomField>
    <fullName>Item_Quote_Information__c</fullName>
    <inlineHelpText>The quote information from vendor sourcing. Should be filled by procurement. e.g

Nakumatt - KSH 40,000
Tuskys      - KSH 40,000
Uchumi     - KSH 40,000</inlineHelpText>
    <label>Item Quote Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>