sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Main_Location__c.field-meta.xml
<CustomField>
    <fullName>Main_Location__c</fullName>
    <formula>TEXT(Asset_Id__r.Main_Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Location</label>
    <type>Text</type>
</CustomField>