sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Max_Price_Var__c.field-meta.xml
<CustomField>
    <fullName>Max_Price_Var__c</fullName>
    <formula>Estimate__c + (Estimate__c *  PR_Price_Var_Per__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Price Var</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>