sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/No_of_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>No_of_Line_Items__c</fullName>
    <label>No of Line Items</label>
    <summaryForeignKey>PTS_PO_Line_item__c.PTS_Line_Item__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>