sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/no_of_received_line_items__c.field-meta.xml
<CustomField>
    <fullName>no_of_received_line_items__c</fullName>
    <description>The number of line items that have been received for the particular PTS</description>
    <label>no_of_received_line_items</label>
    <summarizedField>PTS_PO_Line_item__c.Items_delivererd__c</summarizedField>
    <summaryFilterItems>
        <field>PTS_PO_Line_item__c.Status__c</field>
        <operation>equals</operation>
        <value>Received</value>
    </summaryFilterItems>
    <summaryForeignKey>PTS_PO_Line_item__c.PTS_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>