sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/non_primary_vendor_description__c.field-meta.xml
<CustomField>
    <fullName>non_primary_vendor_description__c</fullName>
    <description>non-primary vendor description</description>
    <label>Non-primary vendor description</label>
    <type>TextArea</type>
</CustomField>