sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Override_Gla__c.field-meta.xml
<CustomField>
    <fullName>Override_Gla__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Gla?</label>
    <type>Checkbox</type>
</CustomField>