sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Override_Justification__c.field-meta.xml
<CustomField>
    <fullName>Override_Justification__c</fullName>
    <label>Override Justification</label>
    <type>TextArea</type>
</CustomField>