sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Override_PR_Item_Cost_Check__c.field-meta.xml
<CustomField>
    <fullName>Override_PR_Item_Cost_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override PR Item Cost Check</label>
    <type>Checkbox</type>
</CustomField>