sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>