sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/PO_Currency__c.field-meta.xml
<CustomField>
    <fullName>PO_Currency__c</fullName>
    <formula>Purchase_Order_Item__r.Currency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Currency</label>
    <type>Text</type>
</CustomField>