sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Po_Line_attached__c.field-meta.xml
<CustomField>
    <fullName>Po_Line_attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Po Line attached</label>
    <type>Checkbox</type>
</CustomField>