sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/PO_Quantity__c.field-meta.xml
<CustomField>
    <fullName>PO_Quantity__c</fullName>
    <formula>IF(ISNULL(Purchase_Order_Item__r.UOM_Conversion_Factor__c), 0,  Quantity__c /Purchase_Order_Item__r.UOM_Conversion_Factor__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The quantity requested in numeric format.</inlineHelpText>
    <label>PO Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>