sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Po_Quantity_Accepted_del__c.field-meta.xml
<CustomField>
    <fullName>Po_Quantity_Accepted_del__c</fullName>
    <description>Po Quantity Accepted</description>
    <formula>Qty_Delivered__c / Inv_PO_Conversion_Factor__c</formula>
    <label>Po Quantity Accepted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>