sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Po_Quantity_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Po_Quantity_Remaining__c</fullName>
    <formula>PO_Quantity__c  -  Po_Quantity_Accepted_del__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Po Quantity Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>