sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/PO_Unit_Value__c.field-meta.xml
<CustomField>
    <fullName>PO_Unit_Value__c</fullName>
    <formula>Purchase_Order_Item__r.Item_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>When the expenditures or value of production of an item is divided by the quantity, the result is known as a unit value.</inlineHelpText>
    <label>PO Unit Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>