sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/POI_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>POI_Unit_Price__c</fullName>
    <label>POI Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>