sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/PP_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>PP_Approved_Date__c</fullName>
    <label>PP Approved Date</label>
    <type>Date</type>
</CustomField>