sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/PR_Item_And_PO_Item_Cost_Difference__c.field-meta.xml
<CustomField>
    <fullName>PR_Item_And_PO_Item_Cost_Difference__c</fullName>
    <formula>AND( NOT( ISBLANK(Purchase_Order_Line_Item__c)),
OR(IF(( (Purchase_Order_Item__r.Unit_Net_Price__c  /  Purchase_Order_Item__r.UOM_Conversion_Factor__c ) -  Budget_Amount_Per_item__c ) &gt; (0.05 * Budget_Amount_Per_item__c), true, false),
IF(((Purchase_Order_Item__r.Unit_Net_Price__c  /  Purchase_Order_Item__r.UOM_Conversion_Factor__c ) -  Budget_Amount_Per_item__c ) &gt; (1000), true, false))

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PR Item And PO Item Cost Difference</label>
    <type>Checkbox</type>
</CustomField>