sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/PR_Line_Receipt_Status__c.field-meta.xml
<CustomField>
    <fullName>PR_Line_Receipt_Status__c</fullName>
    <defaultValue>&#39;Open&#39;</defaultValue>
    <label>PR Line Receipt Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Items Partially Received</fullName>
            </value>
            <value>
                <fullName>All Items Received</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>