sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/PR_Price_Var_Per__c.field-meta.xml
<CustomField>
    <fullName>PR_Price_Var_Per__c</fullName>
    <description>PR Line Price Variance Percentage</description>
    <inlineHelpText>PR Line Price Variance Percentage</inlineHelpText>
    <label>PR Price Var Per</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>