sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Primary_vendor__c.field-meta.xml
<CustomField>
    <fullName>Primary_vendor__c</fullName>
    <formula>Purchase_Order_Item__r.Primary_Vendor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>a contracting service that provides commercial products at a contracted price.</inlineHelpText>
    <label>Primary vendor</label>
    <type>Checkbox</type>
</CustomField>