sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Procurement_Tracking_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Tracking_Sheet__c</fullName>
    <label>Procurement Tracking Sheet</label>
    <referenceTo>Procurement_Tracking_Sheet__c</referenceTo>
    <relationshipName>PTS_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>