sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Purchase_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Purchase Order Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Purchase_Order_Item__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Created</value>
        </filterItems>
        <filterItems>
            <field>Purchase_Order_Item__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Contract Expired</value>
        </filterItems>
        <filterItems>
            <field>Purchase_Order_Item__c.Inventory_Item__c</field>
            <operation>equals</operation>
            <valueField>$Source.Inventory_Item__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Purchase_Order_Item__c</referenceTo>
    <relationshipLabel>Procurement Request Line Items</relationshipLabel>
    <relationshipName>Procurement_Request_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>