sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Purchase_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order Line Item</label>
    <referenceTo>Purchase_Order_Line_Item__c</referenceTo>
    <relationshipLabel>Procurement Request Line Items</relationshipLabel>
    <relationshipName>Procurement_Request_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>