sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Purchase_Uom__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Uom__c</fullName>
    <formula>Purchase_Order_Item__r.Purchase_UoM__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Uom</label>
    <type>Text</type>
</CustomField>