sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/QHSE_Flag__c.field-meta.xml
<CustomField>
    <fullName>QHSE_Flag__c</fullName>
    <description>Changes to 1 if Item Type is a Non-Stock otherwise 0</description>
    <inlineHelpText>Changes to 1 if Item Type is a Non-Stock otherwise 0</inlineHelpText>
    <label>QHSE Flag</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>