sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Qty_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Qty_Delivered__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Qty Delivered</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>