sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <inlineHelpText>Quantity of item being requested</inlineHelpText>
    <label>Inventory Request Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>