sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Quantity_At_Hand__c.field-meta.xml
<CustomField>
    <fullName>Quantity_At_Hand__c</fullName>
    <formula>Inventory_Item__r.Inventory_Stock__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total number of stock-keeping units (SKUs) that are  physically located in the warehouse location at the current time.</inlineHelpText>
    <label>Quantity At Hand</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>