sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Quantity_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Remaining__c</fullName>
    <formula>Quantity__c - Qty_Delivered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Remaining</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>