sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Quantity_Requested_On_PO_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Requested_On_PO_Line_Items__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>items wanted</inlineHelpText>
    <label>Quantity Requested On PO Line Items</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>