sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Quote_Approving_Director__c.field-meta.xml
<CustomField>
    <fullName>Quote_Approving_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Approving Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PTS_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>