sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Quote_Currency__c.field-meta.xml
<CustomField>
    <fullName>Quote_Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Currency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Currency_Config__c.Current__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Currency_Config__c</referenceTo>
    <relationshipName>PTS_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>