sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Quote_Net_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quote_Net_Total_Amount__c</fullName>
    <formula>Quote_Unit_Net_Price__c  *  PO_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total quote amount less VAT</inlineHelpText>
    <label>Quote Net Total Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>