sfSandBoxCode/force-app/main/default/objects/PTS_Line_Item__c/fields/Quote_Total_VAT__c.field-meta.xml
<CustomField>
    <fullName>Quote_Total_VAT__c</fullName>
    <formula>Quote_Unit_VAT_Amount__c  *  PO_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Total VAT</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>